<resources>
    <string name="app_name">Appilot</string>
    <string name="connection_status_indicator">connection status</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with_console_credentials">Sign in with console credentials</string>
    <string name="welcome_to_appilot">Welcome to Appilot</string>
    <string name="app_logo">App Logo</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="accessibility_service_label" />
    <string name="accessibility_service_description" />
</resources>